[gd_scene load_steps=7 format=2]

[ext_resource path="res://flappy-bird-assets/sprites/pipe-green.png" type="Texture" id=1]
[ext_resource path="res://Pipe.gd" type="Script" id=2]
[ext_resource path="res://flappy-bird-assets/audio/point.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 158 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22, 158 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( -8, 92 )
b = Vector2( -8, -95 )

[node name="Pipe" type="Node2D" groups=["pipes"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 49.0, 239.0, 512.0 ],
"_edit_vertical_guides_": [ 144.0 ]
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, 398 )
scale = Vector2( 1, 0.99375 )

[node name="Pipe-green" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 1.00629 )
rotation = -3.14159
scale = Vector2( 1, 1.00629 )
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="Pipe-green2" type="Sprite" parent="StaticBody2D2"]
position = Vector2( 0, -109 )
rotation = -3.14159
scale = Vector2( 1, 0.99375 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 0, -110 )
z_index = 1
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -5, 146 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 14, 0 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
